# kdev-xtest

./: CMakeLists.txt  FindKDevVeritas.cmake  Messages.sh
config/: CMakeLists.txt  configwidget.cpp  configwidget.h  kcm_kdev_veritassettings.desktop  veritasconfig.ui
config/tests/: CMakeLists.txt  configwidgettest.cpp  configwidgettest.h
qtest/: CMakeLists.txt  casebuilder.cpp  createqtestwizard.h  executable.cpp  kdevqtest.desktop  modelbuilder.cpp  modelbuilder.h  qtestoutputdelegate.cpp  qtestoutputdelegate.h  qtestoutputjob.cpp  qtestoutputjob.h  qtestoutputmodel.h  qtestoutputmorpher.cpp  qtestoutputmorpher.h  qtestoutputparser.cpp  qtestoutputparser.h  qtestplugin.cpp  qtestsettings.h
qtest/tests/: CMakeLists.txt  casebuildertest.cpp  newtestwizardtest.cpp  qtestcasetest.cpp  qtestoutputmorphertest.cpp  qtestoutputparsertest.cpp  qtestoutputparsertest.h  qtestrunnertest.cpp  qtestrunnertest.h  runMemcheck.py  standalonerunner.cpp  suitebuildertest.cpp  suitebuildertest.h
qtest/tests/suite1/: expectedFailure.cpp
